# cli

./: .gitignore  ADDITIONAL_TOOLS.md  FOLLOW_UP_TOOLS.md  README.md  pyproject.toml
calendar_schedule/: calendar_schedule.py  requirements.txt  test_calendar_schedule.py
code_review/: code_review.py  requirements.txt  test_code_review.py
consult_pro/: consult_pro.py  requirements.txt  test_consult_pro.py
data_extractor/: data_extractor.py  requirements.txt  test_data_extractor.py
db_query/: db_query.py  requirements.txt  test_db_query.py
doc_generator/: doc_generator.py  requirements.txt  test_doc_generator.py
email_user/: email_user.py  requirements.txt  test_email_user.py
gemini_query/: gemini_query.py  requirements.txt  test_gemini_query.py
git_changelog/: git_changelog.py  requirements.txt  test_git_changelog.py
github_ops/: github_ops.py  requirements.txt  test_github_ops.py
google_docs/: google_docs.py  requirements.txt  test_google_docs.py
llm_query/: llm_query.py  requirements.txt  test_llm_query.py
log_analyzer/: log_analyzer.py  requirements.txt  test_log_analyzer.py
mcp_bridge/: mcp_bridge.py  requirements.txt  test_mcp_bridge.py
prompt_manager/: prompt_manager.py  requirements.txt  test_prompt_manager.py
s3_sync/: requirements.txt  s3_sync.py  test_s3_sync.py
screenshot_url/: requirements.txt  screenshot_url.py  test_screenshot_url.py
semantic_search/: requirements.txt  semantic_search.py  test_semantic_search.py
shell_assist/: requirements.txt  shell_assist.py  test_shell_assist.py
slack_notify/: requirements.txt  (+2 more)
(+12 files in other folders)
