[project]
name = "ai-agent-tools"
version = "0.1.0"
description = "Self-documenting CLI tools for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sendgrid>=6.9.0",
    "google-genai>=1.0.0",
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
email_user = "email_user.email_user:main"
gemini_query = "gemini_query.gemini_query:main"
google_docs = "google_docs.google_docs:main"

[tool.pytest.ini_options]
testpaths = ["email_user", "gemini_query", "google_docs"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
